[tool.poetry]
name = "repl_python3_Cozyeto"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
asyncpraw = "^7.3.1"
replit = "^3.2.0"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
"discord.py" = {git="https://github.com/Rapptz/discord.py"}
PyNaCl = "^1.4.0"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
